--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "engines": {
     "node": "20.12.2"
   },
-  "name": "major_project",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
